--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('https://github.com/ejeong24/ejeong24.github.io/blob/main/images/Black%20Minimal%20Banner.png?raw=true');
+    background-image: url('images/IMG_0372.jpeg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
