--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('images/IMG_0372.jpeg');
+    background-image: url('https://raw.githubusercontent.com/sarahadean/sarahadean.github.io/main/images/IMG_0372.jpeg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
